[package]
name = "error_set"
description = "An error set macro that provides a concise way to define errors and ergonomically coerce between sets. Inspired by Zig's error set type."
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "macro", "error-set"]
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/error_set"
repository = "https://github.com/mcmah309/error_set"

[dependencies]
error_set_impl = { version = "=0.3.2", path = "impl" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
trybuild = "^1.0.91"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[workspace]
members = ["impl"]

[features]
default = []
coerce_macro = ["error_set_impl/coerce_macro"]
tracing = ["dep:tracing"]