[package]
name = "err_trail"
description = "Add context to errors through logging"
version = "0.8.5"
edition = "2024"
license = "Apache-2.0"
documentation = "https://docs.rs/err_trail"
repository = "https://github.com/mcmah309/error_set"

[dependencies]
tracing = { version = "0.1", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
lazy_static = "1"

[features]
default = ["stub"]
# Enables support for the log/tracing/defmt api, without pulling in any crates. Allowing a downstream to choose the appropriate crate.
stub = []

[package.metadata.docs.rs]
all-features = false
features = ["tracing"]
rustdoc-args = ["--cfg", "docsrs"]
