[package]
name = "error_set"
description = "Quick error declarations and automatic conversions between errors for precisely typed error handling. Inspired by Zig's error set type."
categories = ["rust-patterns", "no-std"]
keywords = ["error", "error-handling", "macro", "error-set"]
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
documentation = "https://docs.rs/error_set"
repository = "https://github.com/mcmah309/error_set"
rust-version = "1.86"

[dependencies]
error_set_impl = { version = "=0.9.0", path = "../error_set_impl" }

[dev-dependencies]
trybuild = "=1.0.111"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
eros = "0.3"
reqwest = "0.12"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
