[package]
name = "error_set_impl"
edition = "2024"
description = "Implementation of the proc macro for the error_set crate."
version = "0.8.5"
license = "Apache-2.0"
documentation = "https://docs.rs/error_set"
repository = "https://github.com/mcmah309/error_set"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = [
    "full",
    "parsing",
    "derive",
    "printing",
    "proc-macro",
    "clone-impls",
    "extra-traits",
] }
proc-macro2 = "1"
quote = "1"
regex = "1"

[features]
default = []
# For developing and debugging the macro for possible issues. Do not expose.
dev = []
