[package]
name = "error_set_impl"
edition = "2021"
description = "Implementation of the proc macro for the error_set crate."
version = "0.3.2"
license = "Apache-2.0"
documentation = "https://docs.rs/error_set"
repository = "https://github.com/mcmah309/error_set"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0.58", default-features = false, features = ["parsing","derive","printing","proc-macro","clone-impls"] }
proc-macro2 = "^1.0.79"
quote = "^1.0.26"
indices = "^0.2.1"