[package]
name = "error_set_internal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0.58", features = ["full"] }
proc-macro2 = "^1.0.79"
quote = "^1.0.26"

[dev-dependencies]
trybuild = "^1.0.91"