[package]
name = "test_no_std"
version = "0.1.0"
edition = "2024"

[dependencies]
error_set = { path = "../error_set" }
err_trail = { path = "../err_trail" }
heapless = "0.8"
exit-no-std = "0.2.1"

[[bin]]
name = "test_no_std"
path = "main.rs"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
